# pheval.talos

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  config.yaml  docs_gen.py  docs_gen.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  results.yml  sitemap.xml  tox.ini
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
api/pheval_talos/cli/: index.html
api/pheval_talos/main/: index.html
api/pheval_talos/prepare/create_cohort/: index.html
api/pheval_talos/prepare/edit_next_flow_configs/: index.html
api/pheval_talos/prepare/prepare/: index.html
api/pheval_talos/run/run/: index.html
api/pheval_talos/runner/: index.html
api/pheval_talos/tool_specific_configuration_options/: index.html
docs/: index.md
search/: search_index.json
src/pheval_talos/: __init__.py  cli.py  runner.py  tool_specific_configuration_options.py
src/pheval_talos/post_process/: __init__.py
src/pheval_talos/prepare/: __init__.py  create_cohort.py  edit_next_flow_configs.py  prepare.py
src/pheval_talos/run/: __init__.py  run.py
tests/: __init__.py  demo_test.py
