[tool.poetry]
name = "pheval_talos"
version = "0.0.0"
description = "pheval_talos"
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
importlib-metadata = ">=8.2.0"
pheval = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=8.3.2"}
tox = {version = ">=4.16.0"}
pre-commit = {version = ">=3.3.3"}
ruff = "^0.4.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"
pymdown-extensions = "^9.9"
mkdocs-include-dir-to-nav = "^1.2.0"
mkdocs-click = "^0.8.0"
griffe = "0.38.1"

[tool.poetry.scripts]
pheval_talos = "pheval_talos.cli:main"

[tool.poetry.plugins."pheval.plugins"]
pheval_talos_runner = "pheval_talos.runner:TalosPhEvalRunner"

[tool.ruff]
line-length = 120
target-version = "py311"

src = ["src", "tests"]
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "C90",  # mccabe complexity
    "PL",  # pylint
    "RUF",  # Ruff-specific rules
    "UP",  # pyupgrade
    "NPY",  # NumPy-specific
]
ignore = [
    "E203", "S311", "S101", "S106", "S404", "S108", "S307", "S603", "S607", "S608",
    "B024", "B027", "N801", "N803", "N806", "N815", "E731", "C901", "B019", "PLR0913", "PLW0211"
]
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
